[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udp-win-wsl-bridge"
version = "1.0.0"
description = "UDP port bridge between Windows and WSL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stanislav Nikolaievskyi"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
keywords = ["udp", "wsl", "bridge", "networking", "proxy"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
udp-bridge = "udp_win_wsl_bridge.__main__:run"

[project.urls]
Homepage = "https://github.com/stanisln/WindowsWslPortBridge"
Repository = "https://github.com/stanisln/WindowsWslPortBridge"
Issues = "https://github.com/stanisln/WindowsWslPortBridge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["udp_win_wsl_bridge*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

